--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -1,58 +1,55 @@
 .preloader {
-  display: none;
-  flex-direction: column;
-  justify-content: flex-end;
-  width: 100%;
-  height: 282px;
-  margin: 0;
-  background-color: rgba(245, 246, 247, 1);
-  position: relative;
+    display: none;
+    width: 100%;
+    height: 282px;
+    margin: 0;
+    background-color: rgba(245, 246, 247, 1);
+    position: relative;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .preloader_opened {
-  display: flex;
-}
-
-.preloader__text {
-  margin: 0 auto 80px;
-  vertical-align: bottom;
-  font-family: "Roboto Regular";
-  font-size: 18px;
-  line-height: 24px;
-  color: rgba(182, 188, 191, 1);
+    display: flex;
 }
 
 .preloader__circle {
-  position: absolute;
-  top: 35%;
-  left: 48%;
-  display: block;
-  width: 50px;
-  height: 50px;
-  border: 4px solid #444;
-  border-bottom-color: #888;
-  border-radius: 50%;
-  animation: spin 0.75s infinite linear;
+    display: block;
+    width: 50px;
+    height: 50px;
+    border: 4px solid #444;
+    border-bottom-color: #888;
+    border-radius: 50%;
+    position: absolute;
+    top: 35%;
+    left: 48%;
+    animation: spin .75s infinite linear;
+}
+
+.preloader__text {
+    margin: 0 auto 80px;
+    vertical-align: bottom;
+    font-family: 'Roboto';
+    font-size: 18px;
+    line-height: 24px;
+    color: rgba(182, 188, 191, 1)
 }
 
 @media screen and (max-width: 1250px) {
-  .preloader {
-    height: 204px;
-  }
+    .preloader {
+        height: 288px;
+    }
 }
 
 @media screen and (max-width: 700px) {
-  .preloader {
-    height: 288px;
-  }
-  .preloader__circle {
-    top: 35%;
-    left: 40%;
-  }
+    .preloader__circle {
+        top: 35%;
+        left: 40%;
+    }
 }
 
 @keyframes spin {
-  100% {
-    transform: rotate(360deg);
-  }
+    100% {
+        transform: rotate(360deg);
+    }
 }
