--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -1,76 +1,110 @@
 .saved-news {
-  margin-top: 40px;
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-  align-items: center;
+    min-height: 294px;
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(255, 255, 255, 1);
 }
 
 .saved-news__container {
-  padding-right: 800px;
-  text-align: left;
+    min-height: 198px;
+    margin: auto;
+    width: 1232px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.saved-news__container {
+    margin: auto;
+    width: 1232px;
+    display: flex;
+    flex-direction: column;
 }
 
 .saved-news__title {
-  font-family: Roboto Regular;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 28px;
-  color: rgba(26, 27, 34, 0.5);
+    font-family: 'Roboto';
+    margin: 0;
+    font-size: 18px;
+    line-height: 24px;
+    color: rgba(26, 27, 34, 0.5);
 }
 
-.saved-news__info {
-  font-family: "Robotoslab";
-  font-weight: 400;
-  font-size: 40px;
-  line-height: 46px;
-  color: rgba(26, 27, 34, 1);
-  margin: 0;
-  max-width: 712px;
+.saved-news__main-text {
+    max-width: 530px;
+    font-family: 'Roboto Slab';
+    margin: 0;
+    font-size: 40px;
+    line-height: 46px;
+    color: rgba(26, 27, 34, 1);
 }
 
 .saved-news__subtitle {
-  font-family: "Roboto Regular";
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 24px;
-  color: rgba(26, 27, 34, 1);
+    font-family: 'Roboto';
+    margin: 0;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 400;
+    color: rgba(26, 27, 34, 1);
 }
 
-.saved-news__keyword {
-  font-family: "Roboto Medium";
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 24px;
-  color: rgba(26, 27, 34, 1);
-  margin: 0;
+.saved-news__key-word {
+    font-family: 'Roboto';
+    margin: 0;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 24px;
+    color: rgba(26, 27, 34, 1);
 }
 
-@media screen and (max-width: 1280px) {
-  .saved-news__container {
-    padding-right: 0;
-    text-align: left;
-    width: 90%;
-  }
+@media screen and (max-width: 1250px) {
+    .saved-news {
+        min-height: 204px;
+    }
+    .saved-news__container {
+        width: 688px;
+        min-height: 148px;
+    }
+    .saved-news__title {
+        font-size: 14px;
+        line-height: 24px;
+    }
+    .saved-news__main-text {
+        max-width: 336px;
+        font-size: 30px;
+        line-height: 34px;
+    }
+    .saved-news__subtitle {
+        font-size: 14px;
+        line-height: 24px;
+    }
+    .saved-news__key-word {
+        font-size: 14px;
+        line-height: 24px;
+    }
 }
 
-@media screen and (max-width: 768px) {
-  .saved-news__info {
-    font-size: 30px;
-    line-height: 34px;
-  }
-  .saved-news__title {
-    font-size: 14px;
-    line-height: 24px;
-  }
-  .saved-news__subtitle {
-    font-size: 14px;
-    line-height: 24px;
-    margin-bottom: 32px;
-  }
-
-  .saved-news__keyword {
-    font-size: 14px;
-    line-height: 24px;
-  }
+@media screen and (max-width: 700px) {
+    .saved-news {
+        min-height: 246px;
+    }
+    .saved-news__container {
+        width: 288px;
+        min-height: 206px;
+    }
+    .saved-news__title {
+        font-size: 12px;
+        line-height: 24px;
+    }
+    .saved-news__main-text {
+        max-width: 288px;
+    }
+    .saved-news__subtitle {
+        max-width: 288px;
+        font-size: 18px;
+        line-height: 24px;
+    }
+    .saved-news__key-word {
+        font-size: 18px;
+        line-height: 24px;
+    }
 }
