--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,140 +1,159 @@
-.search {
-  font-family: "Roboto Regular";
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.search-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: 100%;
+    height: 496px;
+    background-image: transparent;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: 3;
 }
 
-.search__title {
-  margin-top: 80px;
-  margin-bottom: 0;
-  text-align: left;
-  font-family: "Robotoslab";
-  color: white;
-  max-width: 608px;
-  font-weight: normal;
-  font-size: 60px;
-  line-height: 64px;
+.search-form__title {
+    max-width: 545px;
+    margin: 0 auto 32px;
+    font-family: 'Roboto Slab';
+    font-size: 60px;
+    line-height: 64px;
+    color: rgb(255, 255, 255);
+    z-index: 3;
 }
 
-.search__subtitle {
-  margin-top: 32px;
-  margin-bottom: 0;
-  padding-right: 63px;
-  text-align: left;
-  color: white;
-  max-width: 545px;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 24px;
+.search-form__subtitle {
+    max-width: 545px;
+    margin: 0 auto 64px;
+    font-family: 'Roboto';
+    font-size: 18px;
+    line-height: 24px;
+    color: rgb(255, 255, 255);
+    z-index: 3;
 }
 
-.search__form {
-  margin-top: 64px;
-  height: 64px;
-  position: relative;
-  margin-bottom: 80px;
+.search-form__form {
+    height: 64px;
+    position: relative;
+    margin: 0 auto 80px;
+    z-index: 3;
 }
 
-.search__input {
-  font-size: 16px;
-  line-height: 22px;
-  width: 570px;
-  height: 62px;
-  outline: none;
-  border: none;
-  border-radius: 100px;
-  padding-left: 38px;
-}
-
-/* .search__input::placeholder {
+.search-form__input {
+    width: 584px;
+    height: 64px;
+    border-radius: 100px;
+    background: rgb(255, 255, 255);
+    border: none;
+    padding: 0;
+    outline: none;
+    font-family: 'Roboto';
+    font-size: 16px;
+    line-height: 22px;
     padding-left: 24px;
-  } */
-
-.search__button {
-  cursor: pointer;
-  color: white;
-  width: 168px;
-  height: 64px;
-  border-radius: 100px;
-  background-color: #2f71e5;
-  outline: none;
-  border: none;
-  position: absolute;
-  right: 0px;
-  transition: ease-in 0.3s all;
 }
 
-.search__button:hover {
-  transition: linear 0.3s all;
-  transform: scale(1.02);
-  color: rgba(255, 255, 255, 0.5);
+.search-form__input::placeholder {
+    font-family: 'Roboto';
+    font-size: 16px;
+    line-height: 22px;
+    color: #B6BCBF;
 }
 
-@media screen and (max-width: 768px) {
-  .search__title {
-    font-size: 36px;
-    line-height: 40px;
-    width: 400px;
-    padding-right: 92px;
-    text-align: left;
-  }
-
-  .search__subtitle {
-    max-width: 452px;
-    padding-right: 45px;
-  }
-
-  .search__input {
-    width: 448px;
-    height: 56px;
-  }
-
-  .search__button {
-    width: 160px;
-    height: 59px;
-  }
+.search-form__input:focus {
+    background:rgb(255, 255, 255, 0.9)
 }
 
-@media screen and (max-width: 650px) {
-  .search__form {
-    margin-top: 122px;
-  }
-
-  .search__title {
-    font-size: 36px;
-    line-height: 40px;
-    width: 285px;
-    text-align: left;
-    padding-right: 0;
-    margin-top: 30px;
-  }
-
-  .search__subtitle {
-    max-width: 288px;
-    padding-right: 0;
-  }
-
-  .search__input {
-    width: 288px;
-    height: 56px;
-    padding-left: 15px;
-  }
-
-  .search__button {
-    width: 303px;
-    height: 56px;
-    top: 70px;
-  }
+.search-form__input:focus::placeholder {
+    color: transparent;
 }
 
-@media screen and (max-width: 325px) {
-  .search__input {
-    width: 273px;
-  }
+.search-form__button {
+    position: absolute;
+    left: 440px;
+    width: 168px;
+    height: 64px;
+    border-radius: 100px;
+    background: rgb(47, 113, 229);
+    border: none;
+    padding: 0;
+    font-family: 'Roboto';
+    font-size: 18px;
+    line-height: 24px;
+    color: rgb(255, 255, 255);
+}
 
-  .search__button {
-    width: 288px;
-    top: 70px;
-  }
+.search-form__button:hover {
+    cursor: pointer;
+    background: rgb(52, 126, 255, 1);
+}
+
+.search-form__button:active {
+    cursor: pointer;
+    background: rgb(42, 101, 204, 1);
+}
+
+@media screen and (max-width: 800px) {
+    .search-form {
+        height: 334px;
+        background-size: auto 100%;
+    }
+    .search-form__title {
+        width: 400px;
+        margin: 0 auto 16px;
+        font-size: 36px;
+        line-height: 40px;
+    }
+    .search-form__subtitle {
+        max-width: 400px;
+        margin: 0 auto 48px;
+    }
+    .search-form__form {
+        height: 56px;
+        position: relative;
+        margin: 0 auto 48px;
+    }
+    .search-form__input {
+        width: 424px;
+        height: 56px;
+    }
+    .search-form__button {
+        position: absolute;
+        left: 288px;
+        width: 160px;
+        height: 56px;
+    }
+}
+
+@media screen and (max-width: 555px) {
+    .search-form {
+        height: 480px;
+        background-size: 100% auto;
+        background-image: url(../../images/background-mobile.jpg);
+    }
+    .search-form__title {
+        width: 285px;
+        margin: 0 auto 16px;
+        font-size: 36px;
+        line-height: 40px;
+    }
+    .search-form__subtitle {
+        max-width: 285px;
+        margin: 0 auto 122px;
+    }
+    .search-form__form {
+        height: 56px;
+        position: relative;
+        margin: 0 auto 104px;
+    }
+    .search-form__input {
+        width: 264px;
+        height: 56px;
+    }
+    .search-form__button {
+        position: absolute;
+        left: 0;
+        top: 72px;
+        width: 288px;
+        height: 56px;
+    }
 }
