--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -1,91 +1,122 @@
-.card-list {
-    margin: auto;
-    padding: 62px 0;
-    display: flex;
-    flex-direction: column;
-    background-color: rgba(245, 246, 247, 1);
+.news-card-list {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding-bottom: 80px;
+  background: #f5f6f7;
+  max-width: 1440px;
+  width: 100%;
+  padding-left: 3.5%;
+  padding-right: 3.5%;
+  box-sizing: border-box;
 }
 
-.card-list_closed {
-    display: none;
+.news-card-list__title {
+  font-family: 'Roboto Slab', 'Arial', 'Helvetica', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  line-height: 46px;
+  color: #1A1B22;
+  margin: 0;
+  padding: 0;
+  padding-top: 80px;
 }
 
-.card-list__results-title {
-    width: 1232px;
-    font-family: 'Roboto Slab';
-    margin: 0 auto 64px;
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 46px;
-    text-align: left;
+.news-card-list__error {
+  padding: 0;
+  margin: 0 auto;
+  font-size: 18px;
+  line-height: 24px;
+  padding-top: 80px;
+  width: calc(100% - 20%);
+  text-align: center;
+  color: #B6BCBF;
 }
 
-.card-list__container {
-    display: grid;
-    margin: auto;
-    grid-template-rows: repeat(auto, 576px);
-    grid-template-columns: repeat(3, 400px);
-    row-gap: 16px;
-    column-gap: 16px;
+.news-card-list__container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 16px;
+  padding-top: 64px;
+  justify-items: center;
+  justify-content: center;
 }
 
-.card-list__button {
-    margin: 64px auto 18px;
-    width: 288px;
-    height: 64px;
-    border-radius: 100px;
-    background: rgb(255, 255, 255);
-    border: none;
-    padding: 0;
-    font-family: 'Roboto';
-    font-size: 18px;
-    line-height: 24px;
-    color: rgb(0, 0, 0);
-    outline: none;
+.news-card-list__button-more {
+  background: #FFFFFF;
+  border-radius: 80px;
+  width: 100%;
+  max-width: 288px;
+  height: 64px;
+  cursor: pointer;
+  user-select: none;
+  outline: none;
+  box-sizing: border-box;
+  transition: all ease 0.5s;
+  border: none;
+  font-family: 'Roboto', 'Arial', 'Helvetica', sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  color: #1A1B22;
+  align-self: center;
+  margin-top: 64px;
 }
 
-.card-list__button:hover {
-    background: rgb(255, 255, 255, 0.9);
-    cursor: pointer;
+.news-card-list__button-more:hover {
+  background: #e8e8e8;
 }
 
-@media screen and (max-width: 1250px) {
-    .card-list {
-        padding: 32px 0;
-    }
-    .card-list__results-title {
-        width: 688px;
-        margin: 0 auto 32px;
-        font-size: 30px;
-        line-height: 34px;
-    }
-    .card-list__container {
-        grid-template-rows: repeat(auto, 420px);
-        grid-template-columns: repeat(3, 224px);
-        row-gap: 8px;
-        column-gap: 8px;
-    }
-    .card-list__button {
-        margin: 32px auto 8px;
-        width: 240px;
-    }
+@media screen and (max-width: 1440px) {
+  .news-card-list {
+    padding-right: 7.2%;
+    padding-left: 7.2%;
+  }
 }
 
-@media screen and (max-width: 700px) {
-    .card-list {
-        padding: 24px 0;
-    }
-    .card-list__results-title {
-        width: 288px;
-        margin: 0 auto 24px;
-    }
-    .card-list__container {
-        grid-template-rows: repeat(auto, 440px);
-        grid-template-columns: repeat(1, 288px);
-        row-gap: 10px;
-    }
-    .card-list__button {
-        margin: 15px auto 8px;
-        width: 288px;
-    }
+@media screen and (max-width: 768px) {
+  .news-card-list {
+    padding-right: 5.2%;
+    padding-left: 5.2%;
+    padding-bottom: 50px;
+  }
+
+  .news-card-list__error {
+    width: 100%;
+  }
+
+  .news-card-list__title {
+    font-size: 30px;
+    line-height: 34px;
+    padding-top: 40px;
+  }
+
+  .news-card-list__container {
+    grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+    grid-gap: 8px;
+    padding-top: 32px;
+  }
+
+  .news-card-list__button-more {
+    margin-top: 37px;
+    max-width: 240px;
+    height: 40px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .news-card-list {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
+  .news-card-list__container {
+    padding-top: 24px;
+  }
+
+  .news-card-list__title {
+    max-width: 250px;
+    padding-top: 32px;
+  }
 }
