fixing mainApi and fonts

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: row;
   padding: 0 104px;
-
 }
 
 .about__avatar {
@@ -14,7 +13,7 @@
   border-radius: 50%;
   object-fit: cover;
   object-position: 80% 40%;
-align-self: center;
+  align-self: center;
 }
 
 .about__text-container {
@@ -22,7 +21,7 @@ align-self: center;
 }
 
 .about__title {
-  font-family: 'Roboto Slab';
+  font-family: "Roboto Slab";
   font-size: 40px;
   line-height: 46px;
   margin-top: 80px;
@@ -31,77 +30,80 @@ align-self: center;
 
 .about__text {
   max-width: 600px;
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-size: 18px;
   line-height: 24px;
   margin-top: 0;
   margin-bottom: 24px;
+  font-style: normal;
+  font-weight: normal;
 }
 
-@media screen and (max-width: 1280px) { 
+@media screen and (max-width: 1280px) {
   .about__avatar {
-      height: 320px;
-      width: 320px;
-  }}
+    height: 320px;
+    width: 320px;
+  }
+}
 
 @media screen and (max-width: 800px) {
   .about {
-      max-width: 100%;
-      min-height: 354px;
-      padding: 0 40px;
+    max-width: 100%;
+    min-height: 354px;
+    padding: 0 40px;
   }
-  
+
   .about__avatar {
-      height: 232px;
-      width: 232px;
+    height: 232px;
+    width: 232px;
   }
-  
+
   .about__text-container {
-      margin-left: 32px;
+    margin-left: 32px;
   }
-  
+
   .about__title {
-      font-size: 30px;
-      line-height: 40px;
-      margin-top: 40px;
+    font-size: 30px;
+    line-height: 40px;
+    margin-top: 40px;
   }
-  
+
   .about__text {
-      max-width: 424px;
-      font-size: 18px;
-      line-height: 24px;
+    max-width: 424px;
+    font-size: 18px;
+    line-height: 24px;
   }
 }
 
 @media screen and (max-width: 555px) {
   .about {
-      max-width: 100%;
-      min-height: 320px;
-      padding: 0 24px;
-      flex-direction: column;
+    max-width: 100%;
+    min-height: 320px;
+    padding: 0 24px;
+    flex-direction: column;
   }
-  
+
   .about__avatar {
-      height: 272px;
-      width: 272px;
-      margin-top: 32px;
+    height: 272px;
+    width: 272px;
+    margin-top: 32px;
   }
-  
+
   .about__text-container {
-margin-left: 0;
+    margin-left: 0;
   }
-  
+
   .about__title {
-      font-size: 30px;
-      line-height: 40px;
-      margin-top: 24px;
-      margin-bottom: 16px;
+    font-size: 30px;
+    line-height: 40px;
+    margin-top: 24px;
+    margin-bottom: 16px;
   }
-  
+
   .about__text {
-      max-width: 288px;
-      font-size: 18px;
-      line-height: 24px;
-      margin-bottom: 16px;
+    max-width: 288px;
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 16px;
   }
 }
