--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,7 +7,7 @@
 }
 
 .footer__author {
-  font-family: Roboto Regular;
+  font-family: "Roboto";
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
@@ -21,7 +21,9 @@
 }
 
 .footer__link {
-  font-family: Roboto Regular;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: normal;
   font-size: 18px;
   line-height: 24px;
   color: black;
